--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,15 +1,18 @@
 ---
 import Arrow from '@/components/arrow.astro';
 import Link from '@/components/link.astro';
+import Section from '@/components/section.astro';
 import Text from '@/components/text.astro';
 import Layout from '@/layouts/index.astro';
 ---
 
-<Layout class="mx-auto flex w-full max-w-md flex-col items-center text-center">
-  <Text as="h1" weight="bold" class="text-[10rem] leading-none">404</Text>
-  <Text as="h2" size="8" weight="bold">Page Not Found</Text>
-  <Text size="2" variant="subtle" class="mt-6 mb-12">
-    The page you are looking for does not exist. It may have been moved, or you may have followed a broken link.
-  </Text>
-  <Link href="/">Go back home<Arrow name="right" /></Link>
+<Layout>
+  <Section class="flex max-w-4xl flex-col items-center text-center">
+    <Text as="h1" font="serif" weight="bold" class="text-[20rem] leading-none">404</Text>
+    <Text as="h2" size="8" weight="bold">Page Not Found</Text>
+    <Text size="2" variant="subtle" class="mt-6 mb-12 max-w-[40ch]">
+      The page you are looking for does not exist. It may have been moved, or you may have followed a broken link.
+    </Text>
+    <Link href="/">Go back home<Arrow name="right" /></Link>
+  </Section>
 </Layout>
