--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,8 +3,9 @@
 @variant dark (&:where(.dark, .dark *));
 
 @theme {
-  --default-font-family: 'Geist Sans';
-  --default-mono-font-family: 'Geist Mono';
+  --font-sans: 'Geist Sans', sans-serif;
+  --font-mono: 'Geist Mono', monospace;
+  --font-serif: 'EB Garamond Variable', serif;
 
   --text-2xs: clamp(0.76rem, calc(0.76rem + (0.02 * (100vw - 20rem) / 76)), 0.8rem);
   --text-xs: clamp(0.87rem, calc(0.87rem + (0.02 * (100vw - 20rem) / 76)), 0.889rem);
@@ -186,4 +187,19 @@
 @utility counter-item {
   @apply before:content-[counter(counter,decimal-leading-zero)_"."] before:[counter-increment:counter];
   @apply before:text-gray-11 before:mr-2 before:text-sm;
+}
+
+/* prettier-ignore */
+@keyframes scroll-progress { to { --scroll-progress: 100; } }
+/* prettier-ignore */
+@property --scroll-progress { initial-value: 0; syntax: '<integer>'; inherits: true; }
+@utility scroll-progress-root {
+  @apply [counter-reset:scroll-progress_var(--scroll-progress)];
+  @apply [scroll-timeline:--scroll-progress-root] [timeline-scope:--scroll-progress-root];
+  @apply [animation:scroll-progress_both_linear] [animation-timeline:--scroll-progress-root];
+  @apply [animation-duration:1ms];
+}
+
+@utility scroll-progress-item {
+  @apply before:content-[counter(scroll-progress)_'%'];
 }
