--- a/src/pages/components/_post-card.astro
+++ b/src/pages/components/_post-card.astro
@@ -15,8 +15,8 @@ const { id, data } = Astro.props;
 <Component.Root as="a" href={`/blog/${id}`}>
   <Component.Header>
     <div class="rounded-border mb-1 h-24 overflow-hidden">
-      <Image {...data.coverDark} alt="Cover" loading="eager" layout="full-width" class="rounded not-dark:hidden" />
-      <Image {...data.coverLight} alt="Cover" loading="eager" layout="full-width" class="rounded dark:hidden" />
+      <Image src={data.coverDark} alt="Cover" loading="eager" layout="full-width" class="rounded not-dark:hidden" />
+      <Image src={data.coverLight} alt="Cover" loading="eager" layout="full-width" class="rounded dark:hidden" />
     </div>
     <Text weight="bold">{data.title}</Text>
     <div class="flex flex-wrap gap-2">{data?.topics.map(({ text }) => <Chip value={text} variant="soft" />)}</div>
