--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -6,11 +6,9 @@ import * as NavigationMenu from '@/components/navigation-menu';
 import Text from '@/components/text.astro';
 import Theme from '@/components/theme.astro';
 import '@/tailwind.css';
-import '@fontsource-variable/eb-garamond';
-import '@fontsource/geist-mono';
-import '@fontsource/geist-sans';
 import { ThemeScript } from 'astro-theme-toggle';
 import type { HTMLAttributes } from 'astro/types';
+import { Font } from 'astro:assets';
 import * as env from 'astro:env/server';
 import { ClientRouter } from 'astro:transitions';
 
@@ -54,6 +52,9 @@ const {
     <link href={String(new URL(Astro.url.pathname, Astro.site)).replace(/\/+$/, '')} rel="canonical" />
     <script is:inline set:text="window.pagefind = await import('/pagefind/pagefind.js')" type="module" />
     <script is:inline set:text="document.documentElement.classList.add('[&_[x-cloak]]:hidden')" />
+    <Font cssVariable="--font-sans" preload />
+    <Font cssVariable="--font-mono" preload />
+    <Font cssVariable="--font-serif" preload />
     <ThemeScript />
     <ClientRouter />
   </head>
